--- a/demo/index.html
+++ b/demo/index.html
@@ -2,11 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css"/>
     <title></title>
 </head>
 <body>
+<section class="parallax-box js-parallax-box" style="height: 700px;">
+    <div data-parallax-type="content" data-speed="normal" data-invert="false"
+         class="parallax-bg js-parallax-bg">
+            <div class="js-parallax-inner">
+                <div class="flexslider">
+                    <ul class="slides">
+                        <li>
+                            <img src="./images/1.jpg" alt="" />
+                        </li>
+                        <li>
+                            <img src="./images/2.jpg" alt="" />
+                        </li>
+                        <li>
+                            <img src="./images/1.jpg" alt="" />
+                        </li>
+                    </ul>
+                </div>
+            </div>
+    </div>
+</section>
 <section style="height: 500px;">
+    <p>
+        Praesent vitae erat semper, aliquam nunc ac, luctus erat. Curabitur ipsum nibh, porttitor ut mauris et, pharetra
+        interdum arcu. Sed et malesuada sapien. Etiam dignissim, nibh at pharetra blandit, magna diam ornare elit, eget
+        varius enim tortor consectetur risus. Nulla arcu mi, vulputate vitae nulla eu, tristique commodo arcu.
+        Pellentesque euismod, sem sit amet finibus laoreet, mauris nulla ultrices leo, quis tincidunt magna lacus id
+        orci. Aenean vitae nisl nisi. Sed sit amet lorem sit amet arcu bibendum pulvinar. Suspendisse potenti. Nullam
+    </p>
+    <p>
+        laoreet, augue ac elementum volutpat, metus lorem tempus enim, in porttitor tellus nunc sit amet justo. Integer
+        ultrices aliquam ipsum, eget pellentesque augue. Praesent tellus turpis, vulputate a tortor vitae, hendrerit
+        scelerisque velit. Mauris hendrerit mauris et urna egestas, scelerisque sagittis neque ultrices. Ut ac lob
+        Praesent vitae erat semper, aliquam nunc ac, luctus erat. Curabitur ipsum nibh, porttitor ut mauris et, pharetra
+        interdum arcu. Sed et malesuada sapien. Etiam dignissim, nibh at pharetra blandit, magna diam ornare elit, eget
+        varius enim tortor consectetur risus. Nulla arcu mi, vulputate vitae nulla eu, tristique commodo arcu.
+
+    </p>
+    <p>Pellentesque euismod, sem sit amet finibus laoreet, mauris nulla ultrices leo, quis tincidunt magna lacus id
+        orci. Aenean vitae nisl nisi. Sed sit amet lorem sit amet arcu bibendum pulvinar. Suspendisse potenti. Nullam
+        laoreet, augue ac elementum volutpat, metus lorem tempus enim, in porttitor tellus nunc sit amet justo. Integer
+        ultrices aliquam ipsum, eget pellentesque augue. Praesent tellus turpis, vulputate a tortor vitae, hendrerit
+        scelerisque velit. Mauris hendrerit mauris et urna egestas, scelerisque sagittis neque ultrices. Ut ac lob
+    </p>
+</section>
+<section class="parallax-box js-parallax-box" style="height: 400px;">
+    <div class="parallax-content">
+        <p>
+            Praesent vitae erat semper, aliquam nunc ac, luctus erat. Curabitur ipsum nibh, porttitor ut mauris et,
+            pharetra
+            interdum arcu. Sed et malesuada sapien. Etiam dignissim, nibh at pharetra blandit, magna diam ornare elit,
+            eget
+            varius enim tortor consectetur risus. Nulla arcu mi, vulputate vitae nulla eu, tristique commodo arcu.
+            Pellentesque euismod, sem sit amet finibus laoreet, mauris nulla ultrices leo, quis tincidunt magna lacus id
+            orci. Aenean vitae nisl nisi. Sed sit amet lorem sit amet arcu bibendum pulvinar. Suspendisse potenti.
+            Nullam
+            laoreet, augue ac elementum volutpat, metus lorem tempus enim, in porttitor tellus nunc sit amet justo.
+            Integer
+            ultrices aliquam ipsum, eget pellentesque augue. Praesent tellus turpis, vulputate a tortor vitae, hendrerit
+            scelerisque velit. Mauris hendrerit mauris et urna egestas, scelerisque sagittis neque ultrices. Ut ac lob
+        </p>
+    </div>
+    <div data-parallax-type="video" data-img-url="./images/1.jpg" data-speed="normal" data-invert="false"
+         class="parallax-bg js-parallax-bg">
+        <video data-loop="true" data-volume="0">
+            <source src="./video/video.mp4" type="video/mp4" />
+        </video>
+    </div>
+</section>
+<section style="height: 300px;">
     <p>
         Praesent vitae erat semper, aliquam nunc ac, luctus erat. Curabitur ipsum nibh, porttitor ut mauris et, pharetra
         interdum arcu. Sed et malesuada sapien. Etiam dignissim, nibh at pharetra blandit, magna diam ornare elit, eget
@@ -50,7 +118,7 @@
     <div data-parallax-type="image" data-img-url="./images/1.jpg" data-speed="normal" data-invert="false"
          class="parallax-bg js-parallax-bg"></div>
 </section>
-<section style="height: 500px;">
+<section style="height: 300px;">
     <p>
         Praesent vitae erat semper, aliquam nunc ac, luctus erat. Curabitur ipsum nibh, porttitor ut mauris et, pharetra
         interdum arcu. Sed et malesuada sapien. Etiam dignissim, nibh at pharetra blandit, magna diam ornare elit, eget
@@ -94,7 +162,7 @@
     <div data-parallax-type="image" data-img-url="./images/2.jpg" data-speed="normal" data-invert="false"
          class="parallax-bg js-parallax-bg"></div>
 </section>
-<section style="height: 500px;">
+<section style="height: 300px;">
     <p>
         Praesent vitae erat semper, aliquam nunc ac, luctus erat. Curabitur ipsum nibh, porttitor ut mauris et, pharetra
         interdum arcu. Sed et malesuada sapien. Etiam dignissim, nibh at pharetra blandit, magna diam ornare elit, eget
@@ -120,6 +188,8 @@
 </section>
 </body>
 <footer>
+    <script src="./jquery/jquery.min.js"></script>
+    <script src="./flex/jquery.flexslider-min.js"></script>
     <script src="../index.compile.js"></script>
     <script src="script.js"></script>
 </footer>
