Add docs, create dom observer

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <title></title>
 </head>
 <body>
+<button id="add">Add element</button>
 <section class="parallax-box js-parallax-box" style="height: 700px;">
     <div data-parallax-type="content" data-speed="normal" data-invert="false"
          class="parallax-bg js-parallax-bg">
@@ -190,7 +191,7 @@
 <footer>
     <script src="./jquery/jquery.min.js"></script>
     <script src="./flex/jquery.flexslider-min.js"></script>
-    <script src="../index.compile.js"></script>
+    <script src="../dist/NoJqueryParallax.min.js"></script>
     <script src="script.js"></script>
 </footer>
 </html>
