add load content event

--- a/demo/index.html
+++ b/demo/index.html
@@ -191,7 +191,7 @@
 <footer>
     <script src="./jquery/jquery.min.js"></script>
     <script src="./flex/jquery.flexslider-min.js"></script>
-    <script src="../dist/NoJqueryParallax.min.js"></script>
+    <script src="../src/index.compile.js"></script>
     <script src="script.js"></script>
 </footer>
 </html>
